have a nice day!

--- a/indexes/nsc1025/160.md
+++ b/indexes/nsc1025/160.md
@@ -1,5 +1,10 @@
 ### 纪元评论：时政评论
 ---
+#### [周晓辉：英军情处曝光李贞驹有因 北京再遭打击](../../pages/nsc1025/n13507104.md) 
+#### [王赫：中共怎么盘算对台战争？](../../pages/nsc1025/n13505689.md) 
+#### [王赫：孙力军案涉及的一个要害问题](../../pages/nsc1025/n13505244.md) 
+#### [【名家专栏】良心驱使美官员透露疫情秘密？](../../pages/nsc1025/n13504846.md) 
+#### [【有冇搞错】哈萨克之乱其实是中俄之争](../../pages/nsc1025/n13505528.md) 
 #### [王友群：江泽民在江苏的五个帮凶的结局](../../pages/nsc1025/n13503194.md) 
 #### [程晓农：日澳主动合作 给拜登压力](../../pages/nsc1025/n13503861.md) 
 #### [周晓辉： 中共渲染他国“惨状” 国人不买账](../../pages/nsc1025/n13502928.md) 
@@ -25,11 +30,6 @@
 #### [钟原：李克强说实话 中国经济正“爬坡过坎”](../../pages/nsc1025/n13495582.md) 
 #### [【名家专栏】中共操纵数据 造下弥天大谎](../../pages/nsc1025/n13495097.md) 
 #### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc1025/n13494708.md) 
-#### [杨威：中共算不算哈萨克斯坦的“外部势力”](../../pages/nsc1025/n13494163.md) 
-#### [【名家专栏】美工会老板不再为工人利益发声？](../../pages/nsc1025/n13492676.md) 
-#### [【名家专栏】Omicron或有助今冬结束大流行](../../pages/nsc1025/n13491194.md) 
-#### [周田：中共若开战 哪些弱点可能变硬伤（一）](../../pages/nsc1025/n13491030.md) 
-#### [大重置的关键一环：疫苗护照重置公民权利](../../pages/nsc1025/n13490962.md) 
 
 ---
 #### 第 [ [160](./160.md) / [159](./159.md) / [158](./158.md) / [157](./157.md) / [156](./156.md) / [155](./155.md) / [154](./154.md) / [153](./153.md) ] 页
