--- a/indexes/nsc993/71.md
+++ b/indexes/nsc993/71.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】北京冬奥，大泡泡能否隔离奥米克戎？](../../pages/nsc993/n13506567.md) 
+#### [无名氏：共匪的毁人机制](../../pages/nsc993/n13506504.md) 
 #### [佛山警方跨市删帖 网友热议](../../pages/nsc993/n13506446.md) 
 #### [【网海拾贝】保不保钟南山？北京当局的难题](../../pages/nsc993/n13504215.md) 
 #### [颜纯钩：屋漏偏逢连夜雨，冬奥抗疫两相冲](../../pages/nsc993/n13504177.md) 
@@ -28,8 +30,6 @@
 #### [刘子冀：那些肮脏龌龊的二三事](../../pages/nsc993/n13484178.md) 
 #### [【网海拾贝】中国过去一年里有多少人死于封城？](../../pages/nsc993/n13482907.md) 
 #### [【网海拾贝】山雨欲来风满楼 2022缠斗更白热化](../../pages/nsc993/n13481060.md) 
-#### [西安小伙外出买馒头被群殴，网友：土匪](../../pages/nsc993/n13478427.md) 
-#### [【网海拾贝】2022：点燃内心火焰，照亮艰巨行](../../pages/nsc993/n13478397.md) 
 
 ---
-#### 第 [ [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) ] 页
+#### 第 [ [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) ] 页
