--- a/indexes/nsc1035/53.md
+++ b/indexes/nsc1035/53.md
@@ -1,5 +1,7 @@
 ### 纪元评论：感悟随笔
 ---
+#### [薄岚澄：一波三折却震撼人心的新年聚会](../../pages/nsc1035/n13506511.md) 
+#### [李清：北京胡同里一家法国人的故事](../../pages/nsc1035/n13502266.md) 
 #### [金言：虎年说虎——忧伤的生肖邮票](../../pages/nsc1035/n13500542.md) 
 #### [卷云：一场心灵的洗涤](../../pages/nsc1035/n13499041.md) 
 #### [李清：“方脑袋”的德国人](../../pages/nsc1035/n13486826.md) 
@@ -28,8 +30,6 @@
 #### [祥瑞：躺平人的选择与《归途》的一步之遥](../../pages/nsc1035/n13213201.md) 
 #### [清荷：祸福皆自前因](../../pages/nsc1035/n13213177.md) 
 #### [乐评：抹不去的纪念——倾听大雄《无名之辈无所适从》](../../pages/nsc1035/n13163359.md) 
-#### [黄翔：宇宙时空岩文（之二）](../../pages/nsc1035/n13141116.md) 
-#### [黄翔：宇宙时空岩文（之一）](../../pages/nsc1035/n13140355.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
