--- a/indexes/nsc1028/58.md
+++ b/indexes/nsc1028/58.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [【名家专栏】保护动物比保护儿童更重要吗？](../../pages/nsc1028/n13506846.md) 
+#### [有52年党龄的著名作家聂绀弩对中共的醒悟](../../pages/nsc1028/n13508154.md) 
 #### [蔡慎坤：生命就像一盒巧克力，结果往往出人意料](../../pages/nsc1028/n13497991.md) 
 #### [永不停止的谎言与暴力 从“长津湖战役”说起](../../pages/nsc1028/n13494094.md) 
 #### [张菁： 蒋介石“驸马”陆久之效命中共被打成反革命](../../pages/nsc1028/n13495439.md) 
@@ -28,8 +30,6 @@
 #### [李清：京剧大师周信芳和他的一家人](../../pages/nsc1028/n13391411.md) 
 #### [【名家专栏】为什么而感恩 林肯总统如是说](../../pages/nsc1028/n13402501.md) 
 #### [第三次分配 中产阶级受重击](../../pages/nsc1028/n13401007.md) 
-#### [我们从小到大学到的历史哪些是假的（11）](../../pages/nsc1028/n13395097.md) 
-#### [中共罪行录之五十九：文革中的“栏杆市事件”](../../pages/nsc1028/n13390605.md) 
 
 ---
 #### 第 [ [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) ] 页
