have a nice day!

--- a/indexes/nsc1025/161.md
+++ b/indexes/nsc1025/161.md
@@ -1,5 +1,9 @@
 ### 纪元评论：时政评论
 ---
+#### [洪博：三退人数累计超3.9亿 中共灭亡已近临界点](../../pages/nsc1025/n13510842.md) 
+#### [观雨堂主：为认知买单的空心人](../../pages/nsc1025/n13511099.md) 
+#### [蔡慎坤：新华社时评 斗什么跟谁斗？](../../pages/nsc1025/n13510628.md) 
+#### [蔡慎坤：谁不喜欢这一盒盒“小海鲜”？](../../pages/nsc1025/n13509889.md) 
 #### [郝平：中共政法工作会议 习亲信释严峻信号](../../pages/nsc1025/n13509297.md) 
 #### [沈舟：美军在南海模拟夺岛 释威慑信号](../../pages/nsc1025/n13509242.md) 
 #### [【名家专栏】再见吧，COVID-19大流行](../../pages/nsc1025/n13509641.md) 
@@ -26,10 +30,6 @@
 #### [【名家专栏】中共与人权水火不容](../../pages/nsc1025/n13500019.md) 
 #### [夏林：“我灭共”袭来 中共和北京冬奥岂止难堪](../../pages/nsc1025/n13500485.md) 
 #### [【名家专栏】中共仍停留在旧的经济模式](../../pages/nsc1025/n13499996.md) 
-#### [钟原：习近平再示警 称考验“前所未有”](../../pages/nsc1025/n13498393.md) 
-#### [【名家专栏】中共芬太尼正在毒杀美国人](../../pages/nsc1025/n13497438.md) 
-#### [郝平：中共支持哈国镇压 被疑烧制内斗镜像？](../../pages/nsc1025/n13497952.md) 
-#### [杨宁：又一央视主持人赵赫死于癌症 苍天饶过谁？](../../pages/nsc1025/n13497655.md) 
 
 ---
-#### 第 [ [160](./160.md) / [159](./159.md) / [158](./158.md) / [157](./157.md) / [156](./156.md) / [155](./155.md) / [154](./154.md) / [153](./153.md) ] 页
+#### 第 [ [161](./161.md) / [160](./160.md) / [159](./159.md) / [158](./158.md) / [157](./157.md) / [156](./156.md) / [155](./155.md) / [154](./154.md) ] 页
