--- a/indexes/nsc1035/53.md
+++ b/indexes/nsc1035/53.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [刘正清：哭张青](../../pages/nsc1035/n13509328.md) 
 #### [何清涟：花谢有余芳，汝剑仍铿锵](../../pages/nsc1035/n13507378.md) 
 #### [薄岚澄：一波三折却震撼人心的新年聚会](../../pages/nsc1035/n13506511.md) 
 #### [李清：北京胡同里一家法国人的故事](../../pages/nsc1035/n13502266.md) 
@@ -29,7 +30,6 @@
 #### [《抉择》影评——每个情节都来自真实的中国](../../pages/nsc1035/n13242564.md) 
 #### [宋紫凤：疫情中的这一家 剧本外的你我他](../../pages/nsc1035/n13242358.md) 
 #### [祥瑞：躺平人的选择与《归途》的一步之遥](../../pages/nsc1035/n13213201.md) 
-#### [清荷：祸福皆自前因](../../pages/nsc1035/n13213177.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
