--- a/indexes/nsc993/71.md
+++ b/indexes/nsc993/71.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [清荷：方舟](../../pages/nsc993/n13510779.md) 
+#### [【网海拾贝】习近平亲信集体缺席 政法委公开分裂？](../../pages/nsc993/n13510748.md) 
+#### [异见作家黎学文被表哥请“喝茶”的经历](../../pages/nsc993/n13510231.md) 
 #### [【网海拾贝】“全面清零”实际上是“账面清零”](../../pages/nsc993/n13508178.md) 
 #### [【网海拾贝】北京冬奥，大泡泡能否隔离奥米克戎？](../../pages/nsc993/n13506567.md) 
 #### [无名氏：共匪的毁人机制](../../pages/nsc993/n13506504.md) 
@@ -27,9 +30,6 @@
 #### [伍新：清零行霸凌](../../pages/nsc993/n13488526.md) 
 #### [西安心绞痛患者被拒诊后离世激怒网民](../../pages/nsc993/n13488004.md) 
 #### [谢田：中国经济趋势认识误区——推特上的讨论](../../pages/nsc993/n13487969.md) 
-#### [【网海拾贝】“可防可控”的原来一直是“人民”](../../pages/nsc993/n13486007.md) 
-#### [刘子冀：那些肮脏龌龊的二三事](../../pages/nsc993/n13484178.md) 
-#### [【网海拾贝】中国过去一年里有多少人死于封城？](../../pages/nsc993/n13482907.md) 
 
 ---
 #### 第 [ [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) ] 页
