have a nice day!

--- a/indexes/nsc1025/161.md
+++ b/indexes/nsc1025/161.md
@@ -1,5 +1,11 @@
 ### 纪元评论：时政评论
 ---
+#### [ 程晓农：走出专制社会的第一步——自发反洗脑](../../pages/nsc1025/n13512864.md) 
+#### [王友群：孙力军为何被控“操纵证券市场”？](../../pages/nsc1025/n13511685.md) 
+#### [【名家专栏】反乌托邦电影《鸣鸟》揭示现实](../../pages/nsc1025/n13510897.md) 
+#### [钟原：习近平达沃斯论坛讲话全面降调](../../pages/nsc1025/n13511646.md) 
+#### [周晓辉：北京要为疫情灭火 源头甩锅海外邮件](../../pages/nsc1025/n13511510.md) 
+#### [颜丹：不只核酸检测 中共趁疫情大发国难财](../../pages/nsc1025/n13511390.md) 
 #### [洪博：三退人数累计超3.9亿 中共灭亡已近临界点](../../pages/nsc1025/n13510842.md) 
 #### [观雨堂主：为认知买单的空心人](../../pages/nsc1025/n13511099.md) 
 #### [蔡慎坤：新华社时评 斗什么跟谁斗？](../../pages/nsc1025/n13510628.md) 
@@ -24,12 +30,6 @@
 #### [颜丹：为保冬奥会 北京疫情无真相](../../pages/nsc1025/n13502850.md) 
 #### [李宇明：中共治下 核酸检测造假算是常态](../../pages/nsc1025/n13502718.md) 
 #### [袁斌：中共不计代价清零背后的深层逻辑](../../pages/nsc1025/n13501619.md) 
-#### [谢田：摊牌时刻？美中第一阶段协议两年期满](../../pages/nsc1025/n13501263.md) 
-#### [沈舟：俄罗斯军事行动没能帮中共减轻压力](../../pages/nsc1025/n13500551.md) 
-#### [王友群：习近平二十大前“防政变”四大举措](../../pages/nsc1025/n13500588.md) 
-#### [【名家专栏】中共与人权水火不容](../../pages/nsc1025/n13500019.md) 
-#### [夏林：“我灭共”袭来 中共和北京冬奥岂止难堪](../../pages/nsc1025/n13500485.md) 
-#### [【名家专栏】中共仍停留在旧的经济模式](../../pages/nsc1025/n13499996.md) 
 
 ---
 #### 第 [ [161](./161.md) / [160](./160.md) / [159](./159.md) / [158](./158.md) / [157](./157.md) / [156](./156.md) / [155](./155.md) / [154](./154.md) ] 页
