--- a/indexes/nsc993/71.md
+++ b/indexes/nsc993/71.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】没有一个酷吏能逃脱因果报应的铁律](../../pages/nsc993/n13512340.md) 
+#### [关乐：红楼还能摇几天？](../../pages/nsc993/n13511448.md) 
 #### [清荷：方舟](../../pages/nsc993/n13510779.md) 
 #### [【网海拾贝】习近平亲信集体缺席 政法委公开分裂？](../../pages/nsc993/n13510748.md) 
 #### [异见作家黎学文被表哥请“喝茶”的经历](../../pages/nsc993/n13510231.md) 
@@ -28,8 +30,6 @@
 #### [陈达：西安撤雁塔区头的背后原由](../../pages/nsc993/n13488756.md) 
 #### [理悟：写给大陆劫难中的同胞们](../../pages/nsc993/n13488623.md) 
 #### [伍新：清零行霸凌](../../pages/nsc993/n13488526.md) 
-#### [西安心绞痛患者被拒诊后离世激怒网民](../../pages/nsc993/n13488004.md) 
-#### [谢田：中国经济趋势认识误区——推特上的讨论](../../pages/nsc993/n13487969.md) 
 
 ---
 #### 第 [ [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) ] 页
