--- a/indexes/nsc1026/52.md
+++ b/indexes/nsc1026/52.md
@@ -1,5 +1,6 @@
 ### 纪元评论：财经评论
 ---
+#### [吴惠林：通货膨胀终究是货币现象](../../pages/nsc1026/n13512979.md) 
 #### [蔡慎坤：恒大倒下谁还能活下去？](../../pages/nsc1026/n13501831.md) 
 #### [王赫：中共开放金融与华尔街“博傻”](../../pages/nsc1026/n13501138.md) 
 #### [陈思敏：中共晒2021年外商投资未提台资的背后](../../pages/nsc1026/n13501057.md) 
@@ -29,7 +30,6 @@
 #### [中国外汇大逃亡：只许州官放火 不许百姓点灯（上）](../../pages/nsc1026/n13228773.md) 
 #### [【美股瞭望】迟来的股市修正年内未必会发生](../../pages/nsc1026/n13223100.md) 
 #### [【谈股论金】美联储缩表意味着什么？](../../pages/nsc1026/n13174610.md) 
-#### [何珊如：滴滴危机——一个鲜活的中国故事](../../pages/nsc1026/n13151962.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
