--- a/indexes/nsc1028/58.md
+++ b/indexes/nsc1028/58.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [【有冇搞错】中国群体免疫至少要一万年](../../pages/nsc1028/n13516675.md) 
+#### [中共罪行录之六十五：“一场血的洗礼”](../../pages/nsc1028/n13517785.md) 
 #### [中共罪恶录之六十四：讲真话送命的大美学家](../../pages/nsc1028/n13512932.md) 
 #### [【名家专栏】保护动物比保护儿童更重要吗？](../../pages/nsc1028/n13506846.md) 
 #### [有52年党龄的著名作家聂绀弩对中共的醒悟](../../pages/nsc1028/n13508154.md) 
@@ -28,8 +30,6 @@
 #### [李清：《海瑞罢官》与京剧大师马连良之死](../../pages/nsc1028/n13412316.md) 
 #### [中共是怎么为自己涂脂抹粉的（6）](../../pages/nsc1028/n13412021.md) 
 #### [中共是怎么为自己涂脂抹粉的（5）](../../pages/nsc1028/n13405477.md) 
-#### [李清：京剧大师周信芳和他的一家人](../../pages/nsc1028/n13391411.md) 
-#### [【名家专栏】为什么而感恩 林肯总统如是说](../../pages/nsc1028/n13402501.md) 
 
 ---
 #### 第 [ [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) ] 页
