--- a/indexes/nsc993/71.md
+++ b/indexes/nsc993/71.md
@@ -1,5 +1,9 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】北京冬奥会参赛者将受到中共软件监控](../../pages/nsc993/n13517808.md) 
+#### [Terry Leung：致各位在英港人](../../pages/nsc993/n13516182.md) 
+#### [网民冷嘲热讽，反腐片《零容忍》评论大翻车](../../pages/nsc993/n13515413.md) 
+#### [何良懋：“泡泡”里的北京冬奥](../../pages/nsc993/n13503702.md) 
 #### [【网海拾贝】西安的烟火气真的回来了吗？](../../pages/nsc993/n13515335.md) 
 #### [【网海拾贝】没有一个酷吏能逃脱因果报应的铁律](../../pages/nsc993/n13512340.md) 
 #### [关乐：红楼还能摇几天？](../../pages/nsc993/n13511448.md) 
@@ -26,10 +30,6 @@
 #### [【网海拾贝】站在悬崖上的习近平](../../pages/nsc993/n13492323.md) 
 #### [西安十大魔幻事件，防疫乱象打脸清零](../../pages/nsc993/n13492159.md) 
 #### [【网海拾贝】中共：兴于夏奥2008，将败于冬奥2022](../../pages/nsc993/n13490419.md) 
-#### [孕妇流产事件 西安高新医院背锅](../../pages/nsc993/n13490369.md) 
-#### [【网海拾贝】看懂西安悲剧，只须读懂西安人的三句话](../../pages/nsc993/n13488057.md) 
-#### [陈达：西安撤雁塔区头的背后原由](../../pages/nsc993/n13488756.md) 
-#### [理悟：写给大陆劫难中的同胞们](../../pages/nsc993/n13488623.md) 
 
 ---
 #### 第 [ [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) ] 页
