--- a/indexes/nsc993/71.md
+++ b/indexes/nsc993/71.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】怕科技发展被美遏制，中共存三大担忧](../../pages/nsc993/n13520639.md) 
+#### [关乐：自作自受——现世现报典型案例掠影](../../pages/nsc993/n13520601.md) 
+#### [净增人口创新低 网友：计划生育“全面胜利”](../../pages/nsc993/n13517857.md) 
 #### [【网海拾贝】北京冬奥会参赛者将受到中共软件监控](../../pages/nsc993/n13517808.md) 
 #### [Terry Leung：致各位在英港人](../../pages/nsc993/n13516182.md) 
 #### [网民冷嘲热讽，反腐片《零容忍》评论大翻车](../../pages/nsc993/n13515413.md) 
@@ -27,9 +30,6 @@
 #### [袁斌：时代的灰照样会落在小粉红头上](../../pages/nsc993/n13496821.md) 
 #### [【网海拾贝】北京冬奥箭在弦上，病毒难料](../../pages/nsc993/n13494656.md) 
 #### [网友：中共防疫已经进入歇斯底里的状态](../../pages/nsc993/n13494227.md) 
-#### [【网海拾贝】站在悬崖上的习近平](../../pages/nsc993/n13492323.md) 
-#### [西安十大魔幻事件，防疫乱象打脸清零](../../pages/nsc993/n13492159.md) 
-#### [【网海拾贝】中共：兴于夏奥2008，将败于冬奥2022](../../pages/nsc993/n13490419.md) 
 
 ---
 #### 第 [ [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) ] 页
