have a nice day!

--- a/indexes/nsc1025/162.md
+++ b/indexes/nsc1025/162.md
@@ -1,5 +1,9 @@
 ### 纪元评论：时政评论
 ---
+#### [王赫：中共假打污染防治攻坚战](../../pages/nsc1025/n13522272.md) 
+#### [钟原：郑州7·20水灾事故调查曝露的真相](../../pages/nsc1025/n13521987.md) 
+#### [沈舟：二十大前习近平先完成了军队布局](../../pages/nsc1025/n13521282.md) 
+#### [郝平：习家军两将折损 内斗空前激烈](../../pages/nsc1025/n13521197.md) 
 #### [袁斌：一份流调报告为何看哭了无数打工人？](../../pages/nsc1025/n13520362.md) 
 #### [周晓辉：中共驻日总领事恶言指责 难阻日本反共态势](../../pages/nsc1025/n13518294.md) 
 #### [王赫：2021年中国外贸数据质疑](../../pages/nsc1025/n13519297.md) 
@@ -26,10 +30,6 @@
 #### [【名家专栏】反乌托邦电影《鸣鸟》揭示现实](../../pages/nsc1025/n13510897.md) 
 #### [钟原：习近平达沃斯论坛讲话全面降调](../../pages/nsc1025/n13511646.md) 
 #### [周晓辉：北京要为疫情灭火 源头甩锅海外邮件](../../pages/nsc1025/n13511510.md) 
-#### [颜丹：不只核酸检测 中共趁疫情大发国难财](../../pages/nsc1025/n13511390.md) 
-#### [洪博：三退人数累计超3.9亿 中共灭亡已近临界点](../../pages/nsc1025/n13510842.md) 
-#### [观雨堂主：为认知买单的空心人](../../pages/nsc1025/n13511099.md) 
-#### [蔡慎坤：新华社时评 斗什么跟谁斗？](../../pages/nsc1025/n13510628.md) 
 
 ---
 #### 第 [ [162](./162.md) / [161](./161.md) / [160](./160.md) / [159](./159.md) / [158](./158.md) / [157](./157.md) / [156](./156.md) / [155](./155.md) ] 页
