--- a/indexes/nsc993/71.md
+++ b/indexes/nsc993/71.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】“我中共就是邪恶了，你又能把我怎么样？！”](../../pages/nsc993/n13522332.md) 
+#### [郑州瞒报水灾死亡人数139名 网友群情激愤](../../pages/nsc993/n13522192.md) 
 #### [【网海拾贝】怕科技发展被美遏制，中共存三大担忧](../../pages/nsc993/n13520639.md) 
 #### [关乐：自作自受——现世现报典型案例掠影](../../pages/nsc993/n13520601.md) 
 #### [净增人口创新低 网友：计划生育“全面胜利”](../../pages/nsc993/n13517857.md) 
@@ -28,8 +30,6 @@
 #### [网文：2022中国十大预测展望](../../pages/nsc993/n13497067.md) 
 #### [【网海拾贝】西安封城事件不亚于新疆的集中营](../../pages/nsc993/n13496983.md) 
 #### [袁斌：时代的灰照样会落在小粉红头上](../../pages/nsc993/n13496821.md) 
-#### [【网海拾贝】北京冬奥箭在弦上，病毒难料](../../pages/nsc993/n13494656.md) 
-#### [网友：中共防疫已经进入歇斯底里的状态](../../pages/nsc993/n13494227.md) 
 
 ---
 #### 第 [ [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) ] 页
