have a nice day!

--- a/indexes/nsc1028/58.md
+++ b/indexes/nsc1028/58.md
@@ -1,5 +1,8 @@
 ### 纪元评论：以史为鉴
 ---
+#### [王友群：金融“大老虎”胡怀邦“案中案”](../../pages/nsc1028/n13523077.md) 
+#### [清竹：是谁让“起死回生”这一名词流传至今？](../../pages/nsc1028/n13523254.md) 
+#### [惠虎宇：台湾自古以来是中国的一部分吗？](../../pages/nsc1028/n13523034.md) 
 #### [【有冇搞错】中国群体免疫至少要一万年](../../pages/nsc1028/n13516675.md) 
 #### [中共罪行录之六十五：“一场血的洗礼”](../../pages/nsc1028/n13517785.md) 
 #### [中共罪恶录之六十四：讲真话送命的大美学家](../../pages/nsc1028/n13512932.md) 
@@ -27,9 +30,6 @@
 #### [王友群：中华奇女子钟海源被枪杀之谜](../../pages/nsc1028/n13430555.md) 
 #### [中共罪行录之六十一：后发的“文革”恶果](../../pages/nsc1028/n13426672.md) 
 #### [中共罪行录之六十：胡风案审讯员的回忆](../../pages/nsc1028/n13423954.md) 
-#### [李清：《海瑞罢官》与京剧大师马连良之死](../../pages/nsc1028/n13412316.md) 
-#### [中共是怎么为自己涂脂抹粉的（6）](../../pages/nsc1028/n13412021.md) 
-#### [中共是怎么为自己涂脂抹粉的（5）](../../pages/nsc1028/n13405477.md) 
 
 ---
 #### 第 [ [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) ] 页
