--- a/indexes/nsc993/71.md
+++ b/indexes/nsc993/71.md
@@ -1,5 +1,9 @@
 ### 纪元评论：自由广场
 ---
+#### [为什么中国人那么拼，却过的如此辛苦？](../../pages/nsc993/n13522372.md) 
+#### [【网海拾贝】死亡循环：保经济误清零，保清零误经济](../../pages/nsc993/n13523876.md) 
+#### [郑纯清：把真理视若工具是共产党魔鬼本性的流露](../../pages/nsc993/n13523791.md) 
+#### [理悟：台上台下看群丑](../../pages/nsc993/n13523677.md) 
 #### [【网海拾贝】“我中共就是邪恶了，你又能把我怎么样？！”](../../pages/nsc993/n13522332.md) 
 #### [郑州瞒报水灾死亡人数139名 网友群情激愤](../../pages/nsc993/n13522192.md) 
 #### [【网海拾贝】怕科技发展被美遏制，中共存三大担忧](../../pages/nsc993/n13520639.md) 
@@ -26,10 +30,6 @@
 #### [网传小米内置反诈中心APP，网民：隐私上交国家](../../pages/nsc993/n13499499.md) 
 #### [新华网嘲讽美国抗疫失败反被网友群嘲](../../pages/nsc993/n13499197.md) 
 #### [【网海拾贝】中共意图建一个“海外省”](../../pages/nsc993/n13499393.md) 
-#### [郑纯清：科学非大道 亦非无捷径](../../pages/nsc993/n13498854.md) 
-#### [网文：2022中国十大预测展望](../../pages/nsc993/n13497067.md) 
-#### [【网海拾贝】西安封城事件不亚于新疆的集中营](../../pages/nsc993/n13496983.md) 
-#### [袁斌：时代的灰照样会落在小粉红头上](../../pages/nsc993/n13496821.md) 
 
 ---
 #### 第 [ [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) ] 页
