--- a/indexes/nsc1025/162.md
+++ b/indexes/nsc1025/162.md
@@ -1,5 +1,9 @@
 ### 纪元评论：时政评论
 ---
+#### [周晓辉：2021大陆死于病毒水灾人数 远高中共数据](../../pages/nsc1025/n13526714.md) 
+#### [岳山：习近平防政变 党报点名三人指向谁？](../../pages/nsc1025/n13526464.md) 
+#### [郑纯清：中共为什么老是拚命“甩锅”？](../../pages/nsc1025/n13525872.md) 
+#### [觅真：中共政法委官员的可悲下场值得惊醒](../../pages/nsc1025/n13525634.md) 
 #### [【名家专栏】冬奥会前中共尽显其残酷卑劣](../../pages/nsc1025/n13524318.md) 
 #### [新州：盘点中共迫害善良制造的恶中之恶](../../pages/nsc1025/n13523764.md) 
 #### [陆客：奥运精神和一个老电影](../../pages/nsc1025/n13523697.md) 
@@ -26,10 +30,6 @@
 #### [从邓丽君登“陆”到方芳要中共教训台湾](../../pages/nsc1025/n13517100.md) 
 #### [何清涟：“拜登经济学”促进中美经济互补](../../pages/nsc1025/n13516683.md) 
 #### [【名家专栏】网球明星德约科维奇的巨大牺牲](../../pages/nsc1025/n13515823.md) 
-#### [岳山：两中央高官“随地倒”震动中国官场](../../pages/nsc1025/n13515984.md) 
-#### [郝平：中纪委六次全会 习讲话释两权斗新信号](../../pages/nsc1025/n13516021.md) 
-#### [周晓辉：北京一确诊者住鸟巢附近 活动轨迹未披露](../../pages/nsc1025/n13515913.md) 
-#### [袁斌：政治传言频出，山雨欲来，新一轮文革后期？](../../pages/nsc1025/n13515245.md) 
 
 ---
 #### 第 [ [162](./162.md) / [161](./161.md) / [160](./160.md) / [159](./159.md) / [158](./158.md) / [157](./157.md) / [156](./156.md) / [155](./155.md) ] 页
