have a nice day!

--- a/indexes/nsc1028/58.md
+++ b/indexes/nsc1028/58.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共罪行录之六十六：中共副主席王洪文的奢靡](../../pages/nsc1028/n13527941.md) 
 #### [王友群：金融“大老虎”胡怀邦“案中案”](../../pages/nsc1028/n13523077.md) 
 #### [清竹：是谁让“起死回生”这一名词流传至今？](../../pages/nsc1028/n13523254.md) 
 #### [惠虎宇：台湾自古以来是中国的一部分吗？](../../pages/nsc1028/n13523034.md) 
@@ -29,7 +30,6 @@
 #### [中共罪行录之六十一：毛泽东的行宫多过帝王](../../pages/nsc1028/n13430849.md) 
 #### [王友群：中华奇女子钟海源被枪杀之谜](../../pages/nsc1028/n13430555.md) 
 #### [中共罪行录之六十一：后发的“文革”恶果](../../pages/nsc1028/n13426672.md) 
-#### [中共罪行录之六十：胡风案审讯员的回忆](../../pages/nsc1028/n13423954.md) 
 
 ---
 #### 第 [ [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) ] 页
