have a nice day!

--- a/indexes/nsc1035/53.md
+++ b/indexes/nsc1035/53.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [李涵：贺岁片《聚会Ⅱ》，让我相信了以德报怨的力量](../../pages/nsc1035/n13530032.md) 
 #### [惠虎宇：影评——穿越生死的《沉默呼声》](../../pages/nsc1035/n13516514.md) 
 #### [刘正清：哭张青](../../pages/nsc1035/n13509328.md) 
 #### [何清涟：花谢有余芳，汝剑仍铿锵](../../pages/nsc1035/n13507378.md) 
@@ -29,7 +30,6 @@
 #### [林青：又到中秋月圆时 多少游子泪湿襟](../../pages/nsc1035/n13245916.md) 
 #### [《抓捕》影评：危难关头，敢不敢拔刀相助](../../pages/nsc1035/n13244251.md) 
 #### [《抉择》影评——每个情节都来自真实的中国](../../pages/nsc1035/n13242564.md) 
-#### [宋紫凤：疫情中的这一家 剧本外的你我他](../../pages/nsc1035/n13242358.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
