--- a/indexes/nsc993/71.md
+++ b/indexes/nsc993/71.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中国坚持清零陷入难以摆脱的死胡同](../../pages/nsc993/n13530282.md) 
+#### [伍新：真吃人的纸老虎](../../pages/nsc993/n13530314.md) 
 #### [【网海拾贝】北京冬奥：21世纪希特勒式奥运会](../../pages/nsc993/n13528201.md) 
 #### [封城后，为找一张病床，打了1000个求助电话](../../pages/nsc993/n13525687.md) 
 #### [颜纯钩：伤天害理奢言天堂，灭绝人性才是革命](../../pages/nsc993/n13525987.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】北京冬奥，大泡泡能否隔离奥米克戎？](../../pages/nsc993/n13506567.md) 
 #### [无名氏：共匪的毁人机制](../../pages/nsc993/n13506504.md) 
 #### [佛山警方跨市删帖 网友热议](../../pages/nsc993/n13506446.md) 
-#### [【网海拾贝】保不保钟南山？北京当局的难题](../../pages/nsc993/n13504215.md) 
-#### [颜纯钩：屋漏偏逢连夜雨，冬奥抗疫两相冲](../../pages/nsc993/n13504177.md) 
 
 ---
 #### 第 [ [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) ] 页
