--- a/indexes/nsc1025/163.md
+++ b/indexes/nsc1025/163.md
@@ -1,5 +1,8 @@
 ### 纪元评论：时政评论
 ---
+#### [颜丹：中国人不愿生娃 中共软硬兼施难奏效](../../pages/nsc1025/n13531251.md) 
+#### [周晓辉：美拟撤离驻华外交官 北京难堪恐惧](../../pages/nsc1025/n13531021.md) 
+#### [程晓农：台湾为何被视为新的西柏林？](../../pages/nsc1025/n13529520.md) 
 #### [王赫：2022中共八大恐惧](../../pages/nsc1025/n13529411.md) 
 #### [王友群：习近平三管齐下保二十大“三连任”](../../pages/nsc1025/n13529377.md) 
 #### [【名家专栏】一场非典型的通货膨胀即将到来](../../pages/nsc1025/n13528442.md) 
@@ -27,9 +30,6 @@
 #### [颜丹：在北京确诊的“打工人”为何令人心酸？](../../pages/nsc1025/n13522997.md) 
 #### [王赫：中共假打污染防治攻坚战](../../pages/nsc1025/n13522272.md) 
 #### [钟原：郑州7·20水灾事故调查曝露的真相](../../pages/nsc1025/n13521987.md) 
-#### [沈舟：二十大前习近平先完成了军队布局](../../pages/nsc1025/n13521282.md) 
-#### [郝平：习家军两将折损 内斗空前激烈](../../pages/nsc1025/n13521197.md) 
-#### [袁斌：一份流调报告为何看哭了无数打工人？](../../pages/nsc1025/n13520362.md) 
 
 ---
-#### 第 [ [162](./162.md) / [161](./161.md) / [160](./160.md) / [159](./159.md) / [158](./158.md) / [157](./157.md) / [156](./156.md) / [155](./155.md) ] 页
+#### 第 [ [163](./163.md) / [162](./162.md) / [161](./161.md) / [160](./160.md) / [159](./159.md) / [158](./158.md) / [157](./157.md) / [156](./156.md) ] 页
