--- a/indexes/nsc1028/58.md
+++ b/indexes/nsc1028/58.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [张菁：红色间谍兄弟五人之悲剧人生](../../pages/nsc1028/n13534128.md) 
 #### [中共罪行录之六十六：中共副主席王洪文的奢靡](../../pages/nsc1028/n13527941.md) 
 #### [王友群：金融“大老虎”胡怀邦“案中案”](../../pages/nsc1028/n13523077.md) 
 #### [清竹：是谁让“起死回生”这一名词流传至今？](../../pages/nsc1028/n13523254.md) 
@@ -29,7 +30,6 @@
 #### [中共是怎么为自己涂脂抹粉的（7）](../../pages/nsc1028/n13431085.md) 
 #### [中共罪行录之六十一：毛泽东的行宫多过帝王](../../pages/nsc1028/n13430849.md) 
 #### [王友群：中华奇女子钟海源被枪杀之谜](../../pages/nsc1028/n13430555.md) 
-#### [中共罪行录之六十一：后发的“文革”恶果](../../pages/nsc1028/n13426672.md) 
 
 ---
 #### 第 [ [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) ] 页
