--- a/indexes/nsc993/71.md
+++ b/indexes/nsc993/71.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc993/n13534222.md) 
 #### [【网海拾贝】中国坚持清零陷入难以摆脱的死胡同](../../pages/nsc993/n13530282.md) 
 #### [伍新：真吃人的纸老虎](../../pages/nsc993/n13530314.md) 
 #### [【网海拾贝】北京冬奥：21世纪希特勒式奥运会](../../pages/nsc993/n13528201.md) 
@@ -29,7 +30,6 @@
 #### [【网海拾贝】“全面清零”实际上是“账面清零”](../../pages/nsc993/n13508178.md) 
 #### [【网海拾贝】北京冬奥，大泡泡能否隔离奥米克戎？](../../pages/nsc993/n13506567.md) 
 #### [无名氏：共匪的毁人机制](../../pages/nsc993/n13506504.md) 
-#### [佛山警方跨市删帖 网友热议](../../pages/nsc993/n13506446.md) 
 
 ---
 #### 第 [ [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) ] 页
