--- a/indexes/nsc993/72.md
+++ b/indexes/nsc993/72.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [佳能“恶意补偿”？网友：请这样的恶意再多些](../../pages/nsc993/n13538850.md) 
 #### [【网海拾贝】“不惜一切代价”中的那个代价](../../pages/nsc993/n13534745.md) 
 #### [电影院里看民主](../../pages/nsc993/n13534505.md) 
 #### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc993/n13534222.md) 
@@ -29,7 +30,6 @@
 #### [清荷：方舟](../../pages/nsc993/n13510779.md) 
 #### [【网海拾贝】习近平亲信集体缺席 政法委公开分裂？](../../pages/nsc993/n13510748.md) 
 #### [异见作家黎学文被表哥请“喝茶”的经历](../../pages/nsc993/n13510231.md) 
-#### [【网海拾贝】“全面清零”实际上是“账面清零”](../../pages/nsc993/n13508178.md) 
 
 ---
 #### 第 [ [72](./72.md) / [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) ] 页
