have a nice day!

--- a/indexes/nsc1025/164.md
+++ b/indexes/nsc1025/164.md
@@ -1,5 +1,6 @@
 ### 纪元评论：时政评论
 ---
+#### [郝平：习团拜会喊话招降 以退为进保连任](../../pages/nsc1025/n13543988.md) 
 #### [王赫：力挺立陶宛 欧美澳在WTO反制中共](../../pages/nsc1025/n13543017.md) 
 #### [【纪元专栏】主流媒体倾斜式报导卡车司机抗议 应受谴责](../../pages/nsc1025/n13543202.md) 
 #### [【名家专栏】口罩支持与反对者为何互相鄙视？](../../pages/nsc1025/n13541315.md) 
@@ -29,7 +30,6 @@
 #### [【名家专栏】冬奥会运动员将被北京严密监视](../../pages/nsc1025/n13530845.md) 
 #### [颜丹：中国人不愿生娃 中共软硬兼施难奏效](../../pages/nsc1025/n13531251.md) 
 #### [周晓辉：美拟撤离驻华外交官 北京难堪恐惧](../../pages/nsc1025/n13531021.md) 
-#### [程晓农：台湾为何被视为新的西柏林？](../../pages/nsc1025/n13529520.md) 
 
 ---
-#### 第 [ [163](./163.md) / [162](./162.md) / [161](./161.md) / [160](./160.md) / [159](./159.md) / [158](./158.md) / [157](./157.md) / [156](./156.md) ] 页
+#### 第 [ [164](./164.md) / [163](./163.md) / [162](./162.md) / [161](./161.md) / [160](./160.md) / [159](./159.md) / [158](./158.md) / [157](./157.md) ] 页
