--- a/indexes/nsc993/72.md
+++ b/indexes/nsc993/72.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [棣子小：警惕共产国际远东支部对台湾的非武力阴谋](../../pages/nsc993/n13543797.md) 
 #### [王维洛：郑州水灾真相难以掩盖](../../pages/nsc993/n13541256.md) 
 #### [佳能“恶意补偿”？网友：请这样的恶意再多些](../../pages/nsc993/n13538850.md) 
 #### [【网海拾贝】“不惜一切代价”中的那个代价](../../pages/nsc993/n13534745.md) 
@@ -29,7 +30,6 @@
 #### [【网海拾贝】没有一个酷吏能逃脱因果报应的铁律](../../pages/nsc993/n13512340.md) 
 #### [关乐：红楼还能摇几天？](../../pages/nsc993/n13511448.md) 
 #### [清荷：方舟](../../pages/nsc993/n13510779.md) 
-#### [【网海拾贝】习近平亲信集体缺席 政法委公开分裂？](../../pages/nsc993/n13510748.md) 
 
 ---
 #### 第 [ [72](./72.md) / [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) ] 页
