--- a/indexes/nsc1028/58.md
+++ b/indexes/nsc1028/58.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共罪行录之六十八：取消过年](../../pages/nsc1028/n13546448.md) 
 #### [中共罪行录之六十七：文革是如何大乱起来的](../../pages/nsc1028/n13544416.md) 
 #### [楚一丁：台海两岸的昨日今日和明日](../../pages/nsc1028/n13531468.md) 
 #### [张菁：红色间谍兄弟五人之悲剧人生](../../pages/nsc1028/n13534128.md) 
@@ -29,7 +30,6 @@
 #### [两个中国：人类文明的双蓝图（下）](../../pages/nsc1028/n13423132.md) 
 #### [中共是怎么为自己涂脂抹粉的（8）](../../pages/nsc1028/n13432247.md) 
 #### [李清：屠呦呦的青蒿素和知青的金鸡纳霜](../../pages/nsc1028/n13426884.md) 
-#### [中共是怎么为自己涂脂抹粉的（7）](../../pages/nsc1028/n13431085.md) 
 
 ---
 #### 第 [ [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) ] 页
