have a nice day!

--- a/indexes/nsc1028/58.md
+++ b/indexes/nsc1028/58.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共罪行录之六十九：拜年歌作者之死](../../pages/nsc1028/n13548579.md) 
+#### [蔡大雅：台湾 为世界点上光明之灯](../../pages/nsc1028/n13531530.md) 
 #### [中共罪行录之六十八：取消过年](../../pages/nsc1028/n13546448.md) 
 #### [中共罪行录之六十七：文革是如何大乱起来的](../../pages/nsc1028/n13544416.md) 
 #### [楚一丁：台海两岸的昨日今日和明日](../../pages/nsc1028/n13531468.md) 
@@ -28,8 +30,6 @@
 #### [中共罪恶录之六十三：克拉玛依大火](../../pages/nsc1028/n13443384.md) 
 #### [中共罪恶录之六十二：残酷无情的“政审”](../../pages/nsc1028/n13435894.md) 
 #### [两个中国：人类文明的双蓝图（下）](../../pages/nsc1028/n13423132.md) 
-#### [中共是怎么为自己涂脂抹粉的（8）](../../pages/nsc1028/n13432247.md) 
-#### [李清：屠呦呦的青蒿素和知青的金鸡纳霜](../../pages/nsc1028/n13426884.md) 
 
 ---
 #### 第 [ [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) ] 页
