--- a/indexes/nsc993/72.md
+++ b/indexes/nsc993/72.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [吴吕南吁居英港人：登记做选民 参选做议员](../../pages/nsc993/n13548833.md) 
+#### [【网海拾贝】中共“团拜会”，孟建柱暴瘦眼神诡异](../../pages/nsc993/n13548612.md) 
+#### [吕千荣：拷问新年的思念](../../pages/nsc993/n13547580.md) 
 #### [【网海拾贝】彭帅处境不明，张高丽平安无事](../../pages/nsc993/n13544551.md) 
 #### [【网海拾贝】甘肃群众演员宰客 李克强吃哑巴亏](../../pages/nsc993/n13546506.md) 
 #### [中国民主党全国联合总部新年致辞](../../pages/nsc993/n13546065.md) 
@@ -27,9 +30,6 @@
 #### [净增人口创新低 网友：计划生育“全面胜利”](../../pages/nsc993/n13517857.md) 
 #### [【网海拾贝】北京冬奥会参赛者将受到中共软件监控](../../pages/nsc993/n13517808.md) 
 #### [Terry Leung：致各位在英港人](../../pages/nsc993/n13516182.md) 
-#### [网民冷嘲热讽，反腐片《零容忍》评论大翻车](../../pages/nsc993/n13515413.md) 
-#### [何良懋：“泡泡”里的北京冬奥](../../pages/nsc993/n13503702.md) 
-#### [【网海拾贝】西安的烟火气真的回来了吗？](../../pages/nsc993/n13515335.md) 
 
 ---
 #### 第 [ [72](./72.md) / [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) ] 页
