--- a/indexes/nsc1028/58.md
+++ b/indexes/nsc1028/58.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共罪行录之七十：上海“红色恐怖”一日](../../pages/nsc1028/n13554515.md) 
 #### [中共罪行录之六十九：拜年歌作者之死](../../pages/nsc1028/n13548579.md) 
 #### [蔡大雅：台湾 为世界点上光明之灯](../../pages/nsc1028/n13531530.md) 
 #### [中共罪行录之六十八：取消过年](../../pages/nsc1028/n13546448.md) 
@@ -29,7 +30,6 @@
 #### [王友群：中共左祸横行时仍坚持独立思考的顾准](../../pages/nsc1028/n13444722.md) 
 #### [中共罪恶录之六十三：克拉玛依大火](../../pages/nsc1028/n13443384.md) 
 #### [中共罪恶录之六十二：残酷无情的“政审”](../../pages/nsc1028/n13435894.md) 
-#### [两个中国：人类文明的双蓝图（下）](../../pages/nsc1028/n13423132.md) 
 
 ---
 #### 第 [ [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) ] 页
