--- a/indexes/nsc1035/53.md
+++ b/indexes/nsc1035/53.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [颜纯钩﻿：一个反共斗士的心路历程](../../pages/nsc1035/n13553725.md) 
 #### [张菁：过年了，想起为修炼而遭难的许那们](../../pages/nsc1035/n13543871.md) 
 #### [李涵：贺岁片《聚会Ⅱ》，让我相信了以德报怨的力量](../../pages/nsc1035/n13530032.md) 
 #### [惠虎宇：影评——穿越生死的《沉默呼声》](../../pages/nsc1035/n13516514.md) 
@@ -29,7 +30,6 @@
 #### [达温：为什么中共领导下的中国看不到“英雄男孩”？](../../pages/nsc1035/n13257099.md) 
 #### [李思仪：每个中国人心里都有一部强拆血泪史](../../pages/nsc1035/n13249632.md) 
 #### [林青：又到中秋月圆时 多少游子泪湿襟](../../pages/nsc1035/n13245916.md) 
-#### [《抓捕》影评：危难关头，敢不敢拔刀相助](../../pages/nsc1035/n13244251.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
