--- a/indexes/nsc993/72.md
+++ b/indexes/nsc993/72.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】美中科技脱钩，中国的代价更大](../../pages/nsc993/n13554949.md) 
+#### [林泉：第一贩卖人口大国的奥运圣会](../../pages/nsc993/n13553762.md) 
 #### [吴吕南吁居英港人：登记做选民 参选做议员](../../pages/nsc993/n13548833.md) 
 #### [【网海拾贝】中共“团拜会”，孟建柱暴瘦眼神诡异](../../pages/nsc993/n13548612.md) 
 #### [吕千荣：拷问新年的思念](../../pages/nsc993/n13547580.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】怕科技发展被美遏制，中共存三大担忧](../../pages/nsc993/n13520639.md) 
 #### [关乐：自作自受——现世现报典型案例掠影](../../pages/nsc993/n13520601.md) 
 #### [净增人口创新低 网友：计划生育“全面胜利”](../../pages/nsc993/n13517857.md) 
-#### [【网海拾贝】北京冬奥会参赛者将受到中共软件监控](../../pages/nsc993/n13517808.md) 
-#### [Terry Leung：致各位在英港人](../../pages/nsc993/n13516182.md) 
 
 ---
 #### 第 [ [72](./72.md) / [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) ] 页
