have a nice day!

--- a/indexes/nsc1025/165.md
+++ b/indexes/nsc1025/165.md
@@ -1,5 +1,6 @@
 ### 纪元评论：时政评论
 ---
+#### [袁斌：中国到底是威权国家还是法西斯国家？](../../pages/nsc1025/n13556639.md) 
 #### [王赫：中共能消除华尔街的疑虑吗？](../../pages/nsc1025/n13556597.md) 
 #### [杨威：习近平和普京到底谈了什么？](../../pages/nsc1025/n13556285.md) 
 #### [李正宽：“徐州八孩母亲”掀开“盛世”黑幕](../../pages/nsc1025/n13555766.md) 
@@ -29,7 +30,6 @@
 #### [王友群：习近平“虎年”会打“老虎王”吗？](../../pages/nsc1025/n13545519.md) 
 #### [杨威：《求是》刊习近平讲话成官场现形记](../../pages/nsc1025/n13545616.md) 
 #### [【名家专栏】中共持续资助凶残的缅甸军政府](../../pages/nsc1025/n13544837.md) 
-#### [郝平：习团拜会喊话招降 以退为进保连任](../../pages/nsc1025/n13543988.md) 
 
 ---
-#### 第 [ [164](./164.md) / [163](./163.md) / [162](./162.md) / [161](./161.md) / [160](./160.md) / [159](./159.md) / [158](./158.md) / [157](./157.md) ] 页
+#### 第 [ [165](./165.md) / [164](./164.md) / [163](./163.md) / [162](./162.md) / [161](./161.md) / [160](./160.md) / [159](./159.md) / [158](./158.md) ] 页
