--- a/indexes/nsc993/72.md
+++ b/indexes/nsc993/72.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [大陆作家对徐州性奴案提七点质疑](../../pages/nsc993/n13556764.md) 
+#### [千百度：在今天的中国，还有多少疯了的杨某侠](../../pages/nsc993/n13555073.md) 
 #### [【网海拾贝】美中科技脱钩，中国的代价更大](../../pages/nsc993/n13554949.md) 
 #### [林泉：第一贩卖人口大国的奥运圣会](../../pages/nsc993/n13553762.md) 
 #### [吴吕南吁居英港人：登记做选民 参选做议员](../../pages/nsc993/n13548833.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】“我中共就是邪恶了，你又能把我怎么样？！”](../../pages/nsc993/n13522332.md) 
 #### [郑州瞒报水灾死亡人数139名 网友群情激愤](../../pages/nsc993/n13522192.md) 
 #### [【网海拾贝】怕科技发展被美遏制，中共存三大担忧](../../pages/nsc993/n13520639.md) 
-#### [关乐：自作自受——现世现报典型案例掠影](../../pages/nsc993/n13520601.md) 
-#### [净增人口创新低 网友：计划生育“全面胜利”](../../pages/nsc993/n13517857.md) 
 
 ---
 #### 第 [ [72](./72.md) / [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) ] 页
