--- a/indexes/nsc993/72.md
+++ b/indexes/nsc993/72.md
@@ -1,5 +1,9 @@
 ### 纪元评论：自由广场
 ---
+#### [徐州丰县拐卖妇女普遍 基层政府被指是保护伞](../../pages/nsc993/n13558232.md) 
+#### [理悟：壬寅新春赠言](../../pages/nsc993/n13558171.md) 
+#### [林泉：第一贩卖人口大国的奥运圣会](../../pages/nsc993/n13558148.md) 
+#### [【网海拾贝】参加北京冬奥给世界带来巨大风险](../../pages/nsc993/n13556788.md) 
 #### [大陆作家对徐州性奴案提七点质疑](../../pages/nsc993/n13556764.md) 
 #### [千百度：在今天的中国，还有多少疯了的杨某侠](../../pages/nsc993/n13555073.md) 
 #### [【网海拾贝】美中科技脱钩，中国的代价更大](../../pages/nsc993/n13554949.md) 
@@ -26,10 +30,6 @@
 #### [为什么中国人那么拼，却过的如此辛苦？](../../pages/nsc993/n13522372.md) 
 #### [【网海拾贝】死亡循环：保经济误清零，保清零误经济](../../pages/nsc993/n13523876.md) 
 #### [郑纯清：把真理视若工具是共产党魔鬼本性的流露](../../pages/nsc993/n13523791.md) 
-#### [理悟：台上台下看群丑](../../pages/nsc993/n13523677.md) 
-#### [【网海拾贝】“我中共就是邪恶了，你又能把我怎么样？！”](../../pages/nsc993/n13522332.md) 
-#### [郑州瞒报水灾死亡人数139名 网友群情激愤](../../pages/nsc993/n13522192.md) 
-#### [【网海拾贝】怕科技发展被美遏制，中共存三大担忧](../../pages/nsc993/n13520639.md) 
 
 ---
 #### 第 [ [72](./72.md) / [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) ] 页
