--- a/indexes/nsc993/72.md
+++ b/indexes/nsc993/72.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】放过中南海，岂不是避重就轻？](../../pages/nsc993/n13560444.md) 
+#### [面对徐州性奴案，一位作家与母亲的痛和愤怒](../../pages/nsc993/n13560392.md) 
 #### [徐州丰县拐卖妇女普遍 基层政府被指是保护伞](../../pages/nsc993/n13558232.md) 
 #### [理悟：壬寅新春赠言](../../pages/nsc993/n13558171.md) 
 #### [林泉：第一贩卖人口大国的奥运圣会](../../pages/nsc993/n13558148.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】央视贪官认罪为何神情放松、笑眯眯？](../../pages/nsc993/n13525841.md) 
 #### [郑州水灾死亡人数仅瞒报139人 网友热议](../../pages/nsc993/n13523907.md) 
 #### [为什么中国人那么拼，却过的如此辛苦？](../../pages/nsc993/n13522372.md) 
-#### [【网海拾贝】死亡循环：保经济误清零，保清零误经济](../../pages/nsc993/n13523876.md) 
-#### [郑纯清：把真理视若工具是共产党魔鬼本性的流露](../../pages/nsc993/n13523791.md) 
 
 ---
 #### 第 [ [72](./72.md) / [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) ] 页
