--- a/indexes/nsc993/72.md
+++ b/indexes/nsc993/72.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】冬奥开幕仅一天 吐槽大会开始了](../../pages/nsc993/n13562799.md) 
+#### [蔡慎坤：国足终于可以歇一歇了](../../pages/nsc993/n13562715.md) 
+#### [网友致徐州丰县中共县委书记的公开信](../../pages/nsc993/n13560481.md) 
 #### [【网海拾贝】放过中南海，岂不是避重就轻？](../../pages/nsc993/n13560444.md) 
 #### [面对徐州性奴案，一位作家与母亲的痛和愤怒](../../pages/nsc993/n13560392.md) 
 #### [徐州丰县拐卖妇女普遍 基层政府被指是保护伞](../../pages/nsc993/n13558232.md) 
@@ -27,9 +30,6 @@
 #### [【网海拾贝】北京冬奥：21世纪希特勒式奥运会](../../pages/nsc993/n13528201.md) 
 #### [封城后，为找一张病床，打了1000个求助电话](../../pages/nsc993/n13525687.md) 
 #### [颜纯钩：伤天害理奢言天堂，灭绝人性才是革命](../../pages/nsc993/n13525987.md) 
-#### [【网海拾贝】央视贪官认罪为何神情放松、笑眯眯？](../../pages/nsc993/n13525841.md) 
-#### [郑州水灾死亡人数仅瞒报139人 网友热议](../../pages/nsc993/n13523907.md) 
-#### [为什么中国人那么拼，却过的如此辛苦？](../../pages/nsc993/n13522372.md) 
 
 ---
 #### 第 [ [72](./72.md) / [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) ] 页
